ProductActivity and database operation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">StocKontrol</string>
+    <string name="title_activity_product">ProductActivity</string>
 </resources>
